--- a/main.scss
+++ b/main.scss
@@ -161,7 +161,13 @@ img {
 	transform: translate(0, -50%);
 	width: 80px;
 	height: 80px;
-	//background-color: black;
+	background-size: 100%;
+	background-repeat: no-repeat;
+
+	@include portrait {
+		width: 40px;
+		height: 40px;
+	}
 
 	&.left {
 		left: 5%;
