--- a/main.scss
+++ b/main.scss
@@ -105,9 +105,23 @@ img {
 	overflow: hidden;
 }
 
+#introLogo {
+	//1224 451
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 1224 / 2048 * 100%;
+	height: 451 / 1200 * 100%;
+	background-image: url(BB_logo.png);
+	background-size: contain;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
 #intro {
 	@include fullscreen;
 	//display: none;
+	background-color: #0b2036;
 }
 
 
@@ -116,6 +130,9 @@ img {
 }
 
 .logos {
+	background-size: 90%;
+	background-position: center center;
+	background-repeat: no-repeat;
 	//border: 1px solid #fff;
 }
 
@@ -210,8 +227,8 @@ img {
 	}
 
 		@include portrait {
-			width: 400 / 1936 * 100%;
-			height: 89 / 2048 * 100%;
+			width: 600 / 1936 * 100%;
+			height: 100 / 2048 * 100%;
 			bottom: 3.0%
 		}
 
@@ -238,7 +255,7 @@ img {
 
 }
 
-.nav {
+.breadcrumbs {
 	width: 290 / 2048 * 100%;
 	height: 34 / 1200 * 100%;
 	bottom: 4.0625%;
@@ -247,7 +264,9 @@ img {
 	display: flex;
 
 	@include portrait {
-		bottom: 10%;
+		width: 290 / 1200 * 100%;
+		height: 34 / 2048 * 100%;
+		bottom: 11%;
 		left: 50%;
 		transform: translate(-50%);
 	}
